[package]
name = "wt_fmhud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
tokio = { version = "*", features = ['full'] }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
eframe = "^0.16.0"